# PaperFi

./: Apollo Surfer - User Stories.docx  LetterOfItent.md  README.md  UserStories.md  package-lock.json  package.json
anchor/: Anchor.toml
anchor/programs/PaperFi/: Cargo.toml
anchor/programs/PaperFi/src/: errors.rs  lib.rs
anchor/programs/PaperFi/src/helpers/: mod.rs
anchor/programs/PaperFi/src/instructions/: add_author.rs  admin_withdraw.rs  buy_paper.rs  edit_paper.rs  edit_review.rs  edit_user.rs  initialize.rs  make_badge.rs  mod.rs  new_paper.rs  new_user.rs  print_badge.rs  review_paper.rs  user_withdraw.rs  verify_author.rs
anchor/programs/PaperFi/src/state/: admin.rs  mod.rs  paper.rs  paper_author.rs  paper_owned.rs  paperfi_config.rs  review.rs  user.rs  user_account.rs
anchor/src/: PaperFi-exports.ts  index.ts
anchor/tests/: PaperFi.spec.ts
src/app/: layout.tsx
src/app/PaperFi/: page.tsx
src/components/PaperFi/: PaperFi-data-access.tsx  PaperFi-feature.tsx  PaperFi-ui.tsx
src/components/ui/: ui-layout.tsx
